Introducing image uploads inside comments and text posts

--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -4251,6 +4251,47 @@ msgstr "Nadřazený komentář neexistuje"
 msgid "Message does not exist"
 msgstr "Zpráva neexistuje"
 
+#: app/views/do.py:1588
+msgid "You do not have sufficient level to upload images"
+msgstr "Nemáš dostatečný level pro upload obrázků"
+
+#: app/views/do.py:1599
+msgid "You have uploaded too many images today"
+msgstr "Dnes jsi již nahrál(a) příliš mnoho obrázků"
+
+#: app/views/do.py:1607
+msgid "Invalid post ID"
+msgstr "Neplatné ID příspěvku"
+
+#: app/views/do.py:1634
+msgid "Failed to process upload"
+msgstr "Nepodařilo se zpracovat upload"
+
+#: app/static/js/Editor.js:83 app/static/js/Editor.js:136
+msgid "Only 1 image allowed"
+msgstr "Maximálně 1 obrázek"
+
+#: app/static/js/Editor.js:103
+msgid "Image must be smaller than 5MB"
+msgstr "Soubor musí být menší než 5MB"
+
+#: app/static/js/Editor.js:109
+msgid "Invalid file type. Please select an image."
+msgstr "Neplatný typ souboru. Prosím zvolit obrázek."
+
+#: app/static/js/Editor.js:139
+msgid "Error uploading image: "
+msgstr "Chyba při nahrávání obrázku: "
+
+#: app/static/js/Editor.js:145 app/static/js/Editor.js:157
+#: app/static/js/Editor.js:166
+msgid "Upload image"
+msgstr "Nahrát obrázek"
+
+#: app/static/js/Editor.js:151
+msgid "Error uploading image"
+msgstr "Chyba při nahrávání obrázku"
+
 #: app/views/do.py:1537
 msgid "Invalid message"
 msgstr "Neplatná zpráva"
