Minor fixes for the day v1

--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -1026,13 +1026,13 @@ msgstr "skrýt nápovědu"
 #: app/static/js/Post.js:831
 msgid ""
 "This site uses a slightly-customized version of <a "
-"href=\"http://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
+"href=\"https://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
 "for formatting. See below for some basics, or check <a "
 "href=\"https://support.reddithelp.com/hc/en-us/articles/360043033952"
 "-Formatting-Guide\">this commenting guide</a> for more details."
 msgstr ""
 "Tento web používá mírně upravenou verzi jazyka <a "
-"href=\"http://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
+"href=\"https://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
 "pro formátování textu. Níže je pár základních příkladů použití, ale detailnější popis najdete například v <a "
 "href=\"https://support.reddithelp.com/hc/en-us/articles/360043033952"
 "-Formatting-Guide\">tomto návodu</a>."
