--- a/app/translations/messages.pot
+++ b/app/translations/messages.pot
@@ -1229,7 +1229,7 @@ msgstr ""
 #: app/static/js/Post.js:831
 msgid ""
 "This site uses a slightly-customized version of <a "
-"href=\"http://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
+"href=\"https://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
 "for formatting. See below for some basics, or check <a "
 "href=\"https://support.reddithelp.com/hc/en-us/articles/360043033952"
 "-Formatting-Guide\">this commenting guide</a> for more details."
