--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -1024,13 +1024,13 @@ msgstr "skryť nápovedu"
 #: app/static/js/Post.js:831
 msgid ""
 "This site uses a slightly-customized version of <a "
-"href=\"http://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
+"href=\"https://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
 "for formatting. See below for some basics, or check <a "
 "href=\"https://support.reddithelp.com/hc/en-us/articles/360043033952"
 "-Formatting-Guide\">this commenting guide</a> for more details."
 msgstr ""
 "Tento web používa mierne upravenú verziu jazyka <a "
-"href=\"http://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
+"href=\"https://daringfireball.net/projects/markdown/syntax\">Markdown</a> "
 "pre formátovanie textu. Nižšie je zopár základných príkladov použitia, ale detailnejší popis nájdete napríklad v <a "
 "href=\"https://support.reddithelp.com/hc/en-us/articles/360043033952"
 "-Formatting-Guide\">tomto návode</a>."
