--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -3343,7 +3343,7 @@ msgstr "Odznaky"
 
 #: app/html/user/profile.html:91
 msgid "Owns"
-msgstr "Založené skupiny"
+msgstr "Vlastní skupiny"
 
 #: app/html/user/profile.html:101
 msgid "Mods"
