--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -3666,6 +3666,10 @@ msgstr "Max. počet použití"
 msgid "%(user)s's preferences"
 msgstr "Preference uživatele %(user)s"
 
+#: app/html/user/settings/preferences.html:48
+msgid "Fill your email address in account settings to enable"
+msgstr "Pro aktivaci vyplňte svou e-mailovou adresu v nastavení účtu"
+
 #: app/static/js/Editor.js:26
 msgid "Bold (ctrl-b)"
 msgstr "Tučné (ctrl-b)"
