Improvements and fixes in sub mods v2

--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
-"Plural-Forms: nplurals=4; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 3;\n"
+"Plural-Forms: nplurals=2; plural=(n==1) ? 0 : 1;\n"
 "X-Crowdin-Project: 2f2b2a8565bfc5253af48bfe43b8fae4\n"
 "X-Crowdin-Project-ID: 2\n"
 "X-Crowdin-Language: sk\n"
