--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -1906,30 +1906,18 @@ msgstr "komentár:"
 msgid "live updates"
 msgstr "update v reálnom čase"
 
-#: app/html/shared/sidebar/home.html:52
-#, python-format
-msgid "%(user)s posted: %(text)s"
-msgstr "%(user)s pridal(a) príspevok: %(text)s"
+#: app/html/shared/sidebar/home.html:55
+msgid "commented"
+msgstr "pridal(a) komentár"
+
+#: app/html/shared/sidebar/home.html:58
+msgid "posted"
+msgstr "pridal(a) príspevok"
 
 #: app/static/js/Socket.js:223
 #, python-format
-msgid "%3 in %4 %1 posted:<br>%2"
-msgstr "%3 v %4 %1 pridal(a) príspevok:<br>%2"
-
-#: app/static/js/Socket.js:198
-#, python-format
-msgid "%3 in %4 %1 commented:<br>%2"
-msgstr "%3 v %4 %1 pridal(a) komentár:<br>%2"
-
-#: app/html/shared/sidebar/home.html:52
-#, python-format
-msgid "posted: %(text)s"
-msgstr "príspevok: %(text)s"
-
-#: app/html/shared/sidebar/home.html:52
-#, python-format
-msgid "posted:"
-msgstr "príspevok:"
+msgid "%1:<br>%2 %3 in %4"
+msgstr "%1:<br>%2 %3 v %4"
 
 #: app/html/shared/sidebar/home.html:69
 msgid "Sub of the day"
