--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -373,8 +373,8 @@ msgstr "Nová notifikácia z čekni.to"
 
 #: app/notifications.py:277
 #, python-format
-msgid "Post reply in %(prefix)s/%(sub)s"
-msgstr "Reakcia na príspevok v %(prefix)s/%(sub)s"
+msgid "Post reply in /%(prefix)s/%(sub)s"
+msgstr "Reakcia na príspevok v /%(prefix)s/%(sub)s"
 
 #: app/notifications.py:282
 #, python-format
@@ -383,8 +383,8 @@ msgstr "%(name)s reagoval(a) na tvoj príspevok %(title)s"
 
 #: app/notifications.py:288
 #, python-format
-msgid "Comment reply in %(prefix)s/%(sub)s"
-msgstr "Reakcia na komentár v %(prefix)s/%(sub)s"
+msgid "Comment reply in /%(prefix)s/%(sub)s"
+msgstr "Reakcia na komentár v /%(prefix)s/%(sub)s"
 
 #: app/notifications.py:293
 #, python-format
@@ -393,8 +393,8 @@ msgstr "%(name)s reagoval(a) na tvoj komentár k príspevku %(title)s"
 
 #: app/notifications.py:299
 #, python-format
-msgid "You were mentioned in %(prefix)s/%(sub)s"
-msgstr "Spomenuli ťa v %(prefix)s/%(sub)s"
+msgid "You were mentioned in /%(prefix)s/%(sub)s"
+msgstr "Spomenuli ťa v /%(prefix)s/%(sub)s"
 
 #: app/notifications.py:304
 #, python-format
@@ -1416,13 +1416,13 @@ msgstr "Nahlásený používateľ"
 
 #: app/html/mod/reportdetails.html:92
 #, python-format
-msgid "%(reported)s has been banned from %(prefix)s/%(sub)s"
-msgstr "%(reported)s bol zabanovaný v skupine %(prefix)s/%(sub)s"
+msgid "%(reported)s has been banned from /%(prefix)s/%(sub)s"
+msgstr "%(reported)s bol zabanovaný v skupine /%(prefix)s/%(sub)s"
 
 #: app/html/mod/reportdetails.html:96
 #, python-format
-msgid "Ban %(reported)s from %(prefix)s/%(sub)s"
-msgstr "Zabanovať používateľa %(reported)s v skupine %(prefix)s/%(sub)s"
+msgid "Ban %(reported)s from /%(prefix)s/%(sub)s"
+msgstr "Zabanovať používateľa %(reported)s v skupine /%(prefix)s/%(sub)s"
 
 #: app/html/mod/reportdetails.html:103
 #, python-format
@@ -2823,8 +2823,8 @@ msgstr "[Vymazaný príspevok]"
 
 #: app/html/sub/post.html:29
 #, python-format
-msgid "Posted in %(prefix)s/%(sub)s by %(username)s"
-msgstr "Pridal(a) %(username)s v %(prefix)s/%(sub)s"
+msgid "Posted in /%(prefix)s/%(sub)s by %(username)s"
+msgstr "Pridal(a) %(username)s v /%(prefix)s/%(sub)s"
 
 #: app/html/sub/post.html:53
 #, python-format
