--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -862,7 +862,7 @@ msgid "Global stylesheet (select a sub)"
 msgstr "Globálny štýl (prevziať z)"
 
 #: app/forms/user.py:186
-msgid "Send email notifications"
+msgid "Email notifications"
 msgstr "Emailové notifikácie"
 
 #: app/forms/user.py:184
