--- a/app/translations/sk/LC_MESSAGES/messages.po
+++ b/app/translations/sk/LC_MESSAGES/messages.po
@@ -869,6 +869,10 @@ msgstr "Emailové notifikácie"
 msgid "Language"
 msgstr "Jazyk"
 
+#: app/forms/user.py:187
+msgid "Highlight new comments"
+msgstr "Zvýrazňovať nové komentáre"
+
 #: app/forms/user.py:191
 msgid "Hide messages"
 msgstr "Skryť správy"
