--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -2414,7 +2414,7 @@ msgid "The sub has been banned by the administration due to ToS/rule violations.
 msgstr "Skupina byla zabanována kvůli porušení pravidel."
 
 #: app/html/sub/blocked.html:13
-msgid "The sub is temporally quarantined and will be back soon."
+msgid "The sub has been temporarily quarantined."
 msgstr "Skupina je v karanténě."
 
 #: app/html/sub/create.html:4 app/html/sub/create.html:12
