Adding "posts only" toggle on activity.html

--- a/app/translations/cs/LC_MESSAGES/messages.po
+++ b/app/translations/cs/LC_MESSAGES/messages.po
@@ -5191,6 +5191,10 @@ msgstr "zde"
 msgid "View saved comments"
 msgstr "Uložené komentáře"
 
+#: app/html/site/activity.html:18
+msgid "Show posts only:"
+msgstr "Zobrazit pouze příspěvky:"
+
 #: app/templates/usercomments.html:2
 msgid "Comments made by"
 msgstr "Komentáře uživatele"
